fixed alignment

--- a/site/assets/css/results.css
+++ b/site/assets/css/results.css
@@ -1,9 +1,3 @@
-.resultsViz {
-    height: 100vh;
-    max-width: 1000px;
-    margin: 0 10%;
-}
-
 section {
     position: relative;
 }
@@ -111,14 +105,28 @@ div.tooltip p {
 
 #headerImage div {
     position: absolute;
-    top: 0;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
 .graphContainer {
     width: 100%;
-    max-width: 1000px;
     position: absolute;
     overflow: hidden;
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.resultsViz {
+    height: 100vh;
+    max-width: 1000px;
+    width: 100%;
+    margin: 0 10%;
+    display:flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .reveal1 {
